# CAIROS

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  README.md  pyproject.toml
cairos/: cli.py  config.py  context.py  executor.py  explain.py  formatter.py  models.py  planner.py  rules.py  safety.py  shell_utils.py  templates.py  text.py
cairos/ai/: base.py
cairos/gui/: server.py
docs/: AI_PROVIDERS.md  AI_SETUP.md  QUICKSTART.md  RELEASE.md  SHELL_NAVIGATION.md  TROUBLESHOOTING.md  TROUBLESHOOTING_AI.md  UPDATING.md  WINDOWS.md
scripts/: run_tests.py
tests/: test_ai_errors.py  test_cli_release.py  test_config_migration.py  test_gui.py  test_run_tests_runner.py  test_templates.py
tests/cases/: testcases.json
