[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairos"
version = "0.1.0"
description = "A context-aware AI layer for your terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0"
]

[project.scripts]
cairos = "cairos.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cairos*"]